# COS214-Project

./: .gitignore  CMakeLists.txt  README.md  docs.bak  main.cpp  makefile
Creation/private/: BarracksBuilding.cpp  BarracksFactory.cpp  BuildingFactory.cpp  FactionState.cpp  HospitalBuilding.cpp  HospitalFactory.cpp  Logs.cpp  MapState.cpp  Simulation.cpp  Soldiers.cpp  Soldiers.h  Squad.cpp  Squad.h  SquadIterator.cpp  TroopIterator.cpp  Troops.cpp  Troops.h
Creation/public/: BarracksBuilding.h  BarracksFactory.h  Building.h  BuildingFactory.h  FactionState.h  HospitalBuilding.h  HospitalFactory.h  Logs.h  MapState.h  Simulation.h  Soldiers.h  Squad.h  SquadIterator.h  TroopIterator.h  Troops.h
Docs/: DefinitiveStyleGuide.md
Driver/private/: AggressiveState.cpp  AttackFromCountry.cpp  BuildInCountry.cpp  ConcreteFaction.cpp  ConcreteSimulator.cpp  DefensiveState.cpp  Faction.cpp  FactionAction.cpp  FactionState.cpp  MoveTroops.cpp  NeutralState.cpp  Recruit.cpp  Restock.cpp  Simulator.cpp  main.cpp
Driver/public/: AattackFromCountry.cpp  AggressiveState.h  AttackFromCountry.h  BuildInCountry.cpp  BuildInCountry.h  ConcreteFaction.cpp  ConcreteFaction.h  ConcreteSimulator.cpp  ConcreteSimulator.h  DefensiveState.h  Faction.h  FactionAction.cpp  FactionAction.h  FactionState.h  MoveTroops.cpp  MoveTroops.h  NeutralState.h  PassiveState.h  Recruit.h  Restock.h  Simulator.h  enums.h  structs.h
Manipulation/private/: Country.cpp  CountryObserver.cpp  FactionObserver.cpp  Observer.cpp
Manipulation/public/: Country.h  CountryObserver.h  FactionObserver.h  Observer.h
Tests/: CommandTests.cpp  CompositeTests.cpp  MementoTests.cpp  ObserverTests.cpp  SimulatorTests.cpp  StateTests.cpp  TestFormatting.h  tests.cpp
